@@ -22,4 +22,4 @@
 # THE SOFTWARE.
 #
 
-VCSetup.information = VectorCAST Setup information used to update project
+VCSetup.information  = VectorCAST Setup information used to update project
