@@ -1,3 +1,6 @@
+26 Oct 2o17
+* Update to retry to support jobs created with earlier plugin versions
+
 25 Oct 2017
 * Added (optional) command retry in the event of a license being unavailable
 * Updated auto-update job to use all saved data from when multi-job was created
